WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244737
[Lockdown Mode] Cannot log in to HBOMax.com
https://bugs.webkit.org/show_bug.cgi?id=244737
Summary
[Lockdown Mode] Cannot log in to HBOMax.com
Myles C. Maxfield
Reported
2022-09-02 15:56:55 PDT
[Lockdown Mode] Cannot log in to HBOMax.com
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-09-02 16:13:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3976
Radar WebKit Bug Importer
Comment 2
2022-09-09 15:57:16 PDT
<
rdar://problem/99763200
>
EWS
Comment 3
2022-09-15 01:28:13 PDT
Committed
254508@main
(75300d2d8279): <
https://commits.webkit.org/254508@main
> Reviewed commits have been landed. Closing PR #3976 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug