Source/WebCore/page/Quirks.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2018-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -164,6 +164,7 @@ public:
 #endif
     bool shouldEnableApplicationCacheQuirk() const;
     bool hasBrokenPermissionsAPISupportQuirk() const;
+    bool shouldEnableFontLoadingAPIQuirk() const;
     
 private:
     bool needsQuirks() const;
@@ -218,6 +219,7 @@ private:
     mutable std::optional<bool> m_shouldEnableApplicationCacheQuirk;
 #endif
     mutable std::optional<bool> m_hasBrokenPermissionsAPISupportQuirk;
+    mutable std::optional<bool> m_shouldEnableFontLoadingAPIQuirk;
 };
 
 } // namespace WebCore
